--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -7,12 +7,14 @@
 
     <ImageView
         android:id="@+id/imvGridItem"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/im_width"
+        android:layout_height="@dimen/im_height"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
