--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,11 +7,13 @@
 
     <ImageView
         android:id="@+id/imvListItem"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/im_width"
+        android:layout_height="@dimen/im_height"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
